# autocli

./: .gitignore  COPILOT_AGENT_FAQ.md  LICENSE  README.deploy.md  README.md  README.testing-github.md  README.testing-pypi.md  pyproject.toml
.github/workflows/: deploy.yml
src/autocli/: _version.py
tests/: README.md
