[build-system]
requires = ["setuptools>=61.0.0", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "autocli"
description = "A dynamic argparse command loader for modular CLIs using __ separation."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "davfive", email = "davfive@gmail.com"}
]
keywords = [
    "cli",
    "argparse",
    "subcommands",
    "dynamic",
    "autocli"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]
dynamic = ["version"]

[project.optional-dependencies]
testing = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0"
]

[project.urls]
Homepage = "https://github.com/davfive/autocli"
Repository = "https://github.com/davfive/autocli"
Issues = "https://github.com/davfive/autocli/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/autocli/_version.py"

[tool.pytest.ini_options]
python_files = "test_*.py"
testpaths = ["tests"]
xfail_strict = true
addopts = "--cov=autocli --cov-report=term-missing --strict-markers"